--- a/public/debt/index.html
+++ b/public/debt/index.html
@@ -145,7 +145,7 @@ input[type=submit]:hover {
 				xhr.send(data);*/
 				fetch("https://dr-med.herokuapp.com/givereward", {
 					  method: 'POST',
-					  body: JSON.stringify(data)
+					  body: data
 					}).then(response => {
 					  if(response.ok) {
 					    return response.json();
