changing amount type

--- a/public/debt/index.html
+++ b/public/debt/index.html
@@ -125,7 +125,8 @@ input[type=submit]:hover {
 				{
 					var name = document.getElementById('name').value;
 					var email = document.getElementById('email').value;
-					var amount = document.getElementById('amount').value;
+					var amoutnt = document.getElementById('amount').value;
+					var amount = parseInt(amoutnt, 10);
 					var loanNumber = document.getElementById('loanNumber').value;
 				//const xhr = new XMLHttpRequest;
 				//const url = "https://dr-med.herokuapp.com/givereward";
